k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: advisor-osc
  labels:
    project: advisor-osc
    environment: production
    isolation: full
